Add transactions to project

--- a/egov-persister/project-persister.yml
+++ b/egov-persister/project-persister.yml
@@ -705,3 +705,114 @@ serviceMaps:
             - jsonPath: $.Projects.*.auditDetails.lastModifiedTime
 
             - jsonPath: $.Projects.*.id
+
+    - version: 1.0
+      name: Projects
+      description: Persists project in project table
+      fromTopic: save-project
+      isTransaction: true
+      isAuditEnabled: true
+      module: PROJECT
+      objecIdJsonPath: $.id
+      tenantIdJsonPath: $.tenantId
+      userUuidJsonPath: $.[0].auditDetails.createdBy
+      transactionCodeJsonPath: $.id
+      auditAttributeBasePath: $.*
+      queryMaps:
+        - query: INSERT INTO project(id,tenantId,projectNumber,name,projectType,projectTypeId,projectSubType,department,description,referenceId,startDate,endDate,isTaskEnabled,parent,projectHierarchy,natureOfWork,additionalDetails,isDeleted,rowVersion,createdBy,lastModifiedBy,createdTime,lastModifiedTime) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+          basePath: $.Projects.*
+          jsonMaps:
+            - jsonPath: $.Projects.*.id
+
+            - jsonPath: $.Projects.*.tenantId
+
+            - jsonPath: $.Projects.*.projectNumber
+
+            - jsonPath: $.Projects.*.name
+
+            - jsonPath: $.Projects.*.projectType
+
+            - jsonPath: $.Projects.*.projectTypeId
+
+            - jsonPath: $.Projects.*.projectSubType
+
+            - jsonPath: $.Projects.*.department
+
+            - jsonPath: $.Projects.*.description
+
+            - jsonPath: $.Projects.*.referenceID
+
+            - jsonPath: $.Projects.*.startDate
+
+            - jsonPath: $.Projects.*.endDate
+
+            - jsonPath: $.Projects.*.isTaskEnabled
+
+            - jsonPath: $.Projects.*.parent
+
+            - jsonPath: $.Projects.*.projectHierarchy
+
+            - jsonPath: $.Projects.*.natureOfWork
+
+            - jsonPath: $.Projects.*.additionalDetails
+              type: JSON
+              dbType: JSONB
+
+            - jsonPath: $.Projects.*.isDeleted
+
+            - jsonPath: $.Projects.*.rowVersion
+
+            - jsonPath: $.Projects.*.auditDetails.createdBy
+
+            - jsonPath: $.Projects.*.auditDetails.lastModifiedBy
+
+            - jsonPath: $.Projects.*.auditDetails.createdTime
+
+            - jsonPath: $.Projects.*.auditDetails.lastModifiedTime
+
+    - version: 1.0
+      description: Persists project transactions
+      fromTopic: project-transaction-create
+      isTransaction: true
+      module: PROJECT
+      objecIdJsonPath: $.transactions.*.transactionId
+      auditAttributeBasePath: $.transactions.*.auditDetails
+      queryMaps:
+        - query: >
+            INSERT INTO project_transaction (
+              id, project_id, process_instance_id,
+              created_by, last_modified_by, created_time, last_modified_time
+            ) VALUES (?, ?, ?, ?, ?, ?, ?)
+          basePath: $.transactions.*
+          jsonMaps:
+            - jsonPath: $.transactions.*.transactionId
+            - jsonPath: $.transactions.*.projectId
+            - jsonPath: $.transactions.*.processInstanceId
+            - jsonPath: $.transactions.*.auditDetails.createdBy
+            - jsonPath: $.transactions.*.auditDetails.lastModifiedBy
+            - jsonPath: $.transactions.*.auditDetails.createdTime
+            - jsonPath: $.transactions.*.auditDetails.lastModifiedTime
+
+    - version: 1.0
+      description: Persists project comments
+      fromTopic: project-comment-create
+      isTransaction: true
+      module: PROJECT
+      objecIdJsonPath: $.comments.*.commentId
+      auditAttributeBasePath: $.comments.*.auditDetails
+      queryMaps:
+        - query: >
+            INSERT INTO project_transaction_comment (
+              id, transaction_id, comment_message, asset_type,
+              created_by, last_modified_by, created_time, last_modified_time
+            ) VALUES (?, ?, ?, ?, ?, ?, ?, ?)
+          basePath: $.comments.*
+          jsonMaps:
+            - jsonPath: $.comments.*.commentId
+            - jsonPath: $.comments.*.transactionId
+            - jsonPath: $.comments.*.commentMessage
+            - jsonPath: $.comments.*.assetType
+            - jsonPath: $.comments.*.auditDetails.createdBy
+            - jsonPath: $.comments.*.auditDetails.lastModifiedBy
+            - jsonPath: $.comments.*.auditDetails.createdTime
+            - jsonPath: $.comments.*.auditDetails.lastModifiedTime
