--- a/egov-persister/asset-persister.yml
+++ b/egov-persister/asset-persister.yml
@@ -58,3 +58,37 @@ serviceMaps:
               type: LONG
             - jsonPath: $.documents.*.geoLocation.latitude
             - jsonPath: $.documents.*.geoLocation.longitude
+
+    - version: 1.0
+      description: Updates asset data
+      fromTopic: update-asset
+      isTransaction: true
+      queryMaps:
+        - query: UPDATE asset SET tenant_id = ?, system = ?, facility_id = ?, asset_type_id = ?, serial_number = ?, model_number = ?, brand_id = ?, asset_details = ?, warranty_start_date = ?, warranty_duration = ?, warranty_end_date = ?, wf_status = ?, is_active = ?,is_operational = ?, additional_details = ?, last_modified_by = ?, last_modified_time = ? WHERE asset_id = ?;
+          basePath: $
+          jsonMaps:
+            - jsonPath: $.tenantId
+            - jsonPath: $.system
+            - jsonPath: $.facilityID
+            - jsonPath: $.assetTypeID
+            - jsonPath: $.serialNumber
+            - jsonPath: $.modelNumber
+            - jsonPath: $.brandID
+            - jsonPath: $.assetDetails
+              type: JSON
+              dbType: JSONB
+            - jsonPath: $.warrantyStartDate
+              type: LONG
+            - jsonPath: $.warrantyDuration
+            - jsonPath: $.warrantyEndDate
+              type: LONG
+            - jsonPath: $.wfStatus
+            - jsonPath: $.isActive
+            - jsonPath: $.isOperational
+            - jsonPath: $.additionalDetails
+              type: JSON
+              dbType: JSONB
+            - jsonPath: $.auditDetails.lastModifiedBy
+            - jsonPath: $.auditDetails.lastModifiedTime
+              type: LONG
+            - jsonPath: $.assetId
