--- a/egov-persister/im-services-persister.yml
+++ b/egov-persister/im-services-persister.yml
@@ -1,95 +1,86 @@
 serviceMaps:
   serviceName: im-services
   mappings:
-    - version: 1.0
+    - version: 1
       description: Persists im service request in tables
       fromTopic: save-im-request
       isTransaction: true
+      isAuditEnabled: true
+      module: Incident
+      objecIdJsonPath: $.id
+      tenantIdJsonPath: $.tenantId
+      transactionCodeJsonPath: $.incidentId
+      auditAttributeBasePath: $.incident
       queryMaps:
-
-        - query: INSERT INTO eg_incident_v2(id, tenantid, incidenttype, incidentsubtype, incidentid, additionaldetails, applicationstatus, district, block, phctype, phcsubtype, createdby, createdtime, lastmodifiedby, lastmodifiedtime, comments, filed_date, legacy_id, migration_id) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
-          basePath: incident
+        - query: >-
+            INSERT INTO eg_incident_v2(id, tenantid, incidenttype,
+            incidentsubtype, incidentid, additionaldetails, applicationstatus,
+            district, block, phctype, phcsubtype, createdby, createdtime,
+            lastmodifiedby, lastmodifiedtime, comments,accountid, reportertenant,reportertype,systemfunctional, fileddate, legacyid, migrationid) VALUES (?, ?, ?, ?, ?,
+            ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ? , ? , ?, ?, ?);
+          basePath: $.incident
           jsonMaps:
             - jsonPath: $.incident.id
-
             - jsonPath: $.incident.tenantId
-
             - jsonPath: $.incident.incidentType
-
             - jsonPath: $.incident.incidentSubType
-
             - jsonPath: $.incident.incidentId
-
             - jsonPath: $.incident.additionalDetail
               type: JSON
               dbType: JSONB
-
             - jsonPath: $.incident.applicationStatus
-
             - jsonPath: $.incident.district
-
             - jsonPath: $.incident.block
-
             - jsonPath: $.incident.phcType
-
             - jsonPath: $.incident.phcSubType
-
             - jsonPath: $.incident.auditDetails.createdBy
-
             - jsonPath: $.incident.auditDetails.createdTime
-
             - jsonPath: $.incident.auditDetails.lastModifiedBy
-
             - jsonPath: $.incident.auditDetails.lastModifiedTime
-
             - jsonPath: $.incident.comments
-
+            - jsonPath: $.incident.accountId
+            - jsonPath: $.incident.reporterTenant
+            - jsonPath: $.incident.reporterType
+            - jsonPath: $.incident.systemFunctional
             - jsonPath: $.incident.filedDate
-
             - jsonPath: $.incident.legacyId
-
             - jsonPath: $.incident.migrationId
 
 
-    - version: 1.0
+    - version: 1
       description: Updates im service request in tables
       fromTopic: update-im-request
       isTransaction: true
+      isAuditEnabled: true
+      module: Incident
+      objecIdJsonPath: $.id
+      tenantIdJsonPath: $.tenantId
+      transactionCodeJsonPath: $.incidentId
+      auditAttributeBasePath: $.incident
       queryMaps:
-
-        - query: UPDATE eg_incident_v2 SET incidenttype=?, incidentid=?, incidentsubtype=?, additionaldetails=?, applicationstatus=?, district=? , block=? , phctype=? , phcsubtype=?, lastmodifiedby=?, lastmodifiedtime=?, comments=?, filed_date=?, legacy_id=?, migration_id=? WHERE id=?;
-          basePath: incident
+        - query: >-
+            UPDATE eg_incident_v2 SET incidenttype=?, incidentid=?,
+            incidentsubtype=?, additionaldetails=?, applicationstatus=?,
+            district=? , block=? , phctype=? , phcsubtype=?, lastmodifiedby=?,
+            lastmodifiedtime=?, comments=?, systemfunctional=?, fileddate=? , legacyid=? , migrationid=? WHERE id=?;
+          basePath: $.incident
           jsonMaps:
             - jsonPath: $.incident.incidentType
-
             - jsonPath: $.incident.incidentId
-
             - jsonPath: $.incident.incidentSubType
-
             - jsonPath: $.incident.additionalDetail
               type: JSON
               dbType: JSONB
-
             - jsonPath: $.incident.applicationStatus
-
             - jsonPath: $.incident.district
-
             - jsonPath: $.incident.block
-
             - jsonPath: $.incident.phcType
-
             - jsonPath: $.incident.phcSubType
-
             - jsonPath: $.incident.auditDetails.lastModifiedBy
-
             - jsonPath: $.incident.auditDetails.lastModifiedTime
-
             - jsonPath: $.incident.comments
-
+            - jsonPath: $.incident.systemFunctional
             - jsonPath: $.incident.id
-
             - jsonPath: $.incident.filedDate
-
             - jsonPath: $.incident.legacyId
-
             - jsonPath: $.incident.migrationId
