--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -329,25 +329,25 @@ ServiceMaps:
     indexes:
       - name: login-report
         type: general
-        id: $.userLoginReport.userName
+        id: $.userName
         jsonPath: $
-        timeStampField: $.userLoginReport.lastLoginDateTime
+        timeStampField: $.lastLoginDateTime
         customJsonMapping:
           indexMapping: { "Data": { "userLoginReport": { } } }
           fieldMapping:
-            - inJsonPath: $.userLoginReport.userName
+            - inJsonPath: $.userName
               outJsonPath: $.Data.userLoginReport.userName
-            - inJsonPath: $.userLoginReport.userRole
+            - inJsonPath: $.userRole
               outJsonPath: $.Data.userLoginReport.userRole
-            - inJsonPath: $.userLoginReport.currentOwnerName
+            - inJsonPath: $.currentOwnerName
               outJsonPath: $.Data.userLoginReport.currentOwnerName
-            - inJsonPath: $.userLoginReport.lastLoginDateTime
+            - inJsonPath: $.lastLoginDateTime
               outJsonPath: $.Data.userLoginReport.lastLoginDateTime
-            - inJsonPath: $.userLoginReport.healthFacilityName
+            - inJsonPath: $.healthFacilityName
               outJsonPath: $.Data.userLoginReport.healthFacilityName
-            - inJsonPath: $.userLoginReport.block
+            - inJsonPath: $.block
               outJsonPath: $.Data.userLoginReport.block
-            - inJsonPath: $.userLoginReport.district
+            - inJsonPath: $.district
               outJsonPath: $.Data.userLoginReport.district
-            - inJsonPath: $.userLoginReport.state
+            - inJsonPath: $.state
               outJsonPath: $.Data.userLoginReport.state
